Changes in 1.4:
- Decrease code redundancy in torrent loading code
- Add support for TR-064 IGD's
- Make sure we do not connect to the custom IP or the routers IP (316446)

Changes in 1.3.1:
- Add workaround for broken handling of btrfs subvolumes by solid (306825)
- Fix crash when preallocating diskspace when a file is enabled during the download of a torrent (307178) 
- Make sure stats get updated properly during data check (308707)
- Bind peer sockets to preferred interface for outbound connections
- Fix bug causing UDP connections not to get established on FreeBSD because FIONREAD returns the size of the data and the peer address (Review: 108076)

Changes in 1.3:
- Do not pass link local IPv6 addresses to ip parameter of tracker (305187)

Changes in 1.3rc1:
- Implement BEP 32, IPv6 DHT (295194)
- Revamp DHT code and follow spec more closely on routing table
- Revamp SingleFileCache, MultiFileCache and data preallocation
- Webseeds now follow connection limits (184941)
- Add new SignalCatcher class to handle UNIX signals (296835)
- Make TimeEstimator return sortable values (298542)
- Keep track of partitions files of torrents are on
- Add methods to check if storage is mounted
- Make sure all trackers are used of a magnet link (302997, 303269)
- Fix warning message about locale being recreated
- Fix crash in DHT code caused by infinite recursion (300974)

Changes in 1.2.1:
- Fix deadlock in webseeding code (295719)
- Fix individual torrent download limit not working
- Fix build on FreeBSD
- Fix crash due to attempting to call pop_front on an empty list (299536)

Changes in 1.2:
- Fix large file preallocation when not using quick preallocation in some cases (293279)
- Disable current open file checking, it causes performance issues in some situations
- Don't use the gcrypt version macro in it's version check (294866)

Changes in 1.2rc1:
- Make it possible to check data on chunk ranges instead of the entire torrent