@@ -2,6 +2,7 @@ Changes in 1.4:
 - Decrease code redundancy in torrent loading code
 - Add support for TR-064 IGD's
 - Make sure we do not connect to the custom IP or the routers IP (316446)
+- Fix url query not getting passed to webseed download requests (318325)
 
 Changes in 1.3.1:
 - Add workaround for broken handling of btrfs subvolumes by solid (306825)
